--- a/styles.css
+++ b/styles.css
@@ -65,11 +65,11 @@ main {
 }
 
 .main-heading {
-  color: #92edfd;
+  color: #f7d26e;
 }
 
 .sub-heading {
-  color: #925df5; 
+  color: #f18841; 
 }
 
 .fixed-button {
